DPA scream and DPA common should work

--- a/experiment.ipynb
+++ b/experiment.ipynb
@@ -404,6 +404,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ola\n"
+     ]
+    }
+   ],
+   "source": [
+    "class test(object):\n",
+    "    def __init__(self):\n",
+    "        super(test, self).__init__()\n",
+    "    \n",
+    "    def run(self):\n",
+    "        print('test')\n",
+    "\n",
+    "class ola(test):\n",
+    "    def __init__(self):\n",
+    "        super(ola, self).__init__()\n",
+    "    \n",
+    "    def run(self):\n",
+    "        super(ola,)\n",
+    "        print('ola')\n",
+    "\n",
+    "a = ola()\n",
+    "a.run()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABCMeta, abstractmethod\n",
+    "\n",
+    "class base(metaclass=ABCMeta):\n",
+    "    def __init__(self):\n",
+    "        super(base, self).__init__()\n",
+    "        self.type = None\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def run(self):\n",
+    "        print(self.type(3))\n",
+    "\n",
+    "class son(base):\n",
+    "    def __init__(self):\n",
+    "        super(son, self).__init__()\n",
+    "        self.type = int\n",
+    "    \n",
+    "    def run(self):\n",
+    "        super(son, self).run()\n",
+    "\n",
+    "b = son()\n",
+    "b.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -428,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1+"
+   "version": "3.4.3+"
   }
  },
  "nbformat": 4,
